# feynman-kac-quant-research-acceleration

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-durable-storage-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-UAT.md
.planning/phases/02-yaml-manifests-validation-and-domain-models/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-concurrent-durable-execution/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-UAT.md
.planning/phases/04-scoring-diagnostics-leaderboards/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md
.planning/phases/05-run-analysis-cli/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-UAT.md
.planning/phases/06-extensibility/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-UAT.md
.planning/phases/07-model-packaging/: 07-01-COMMIT-TRACE.md  07-01-PLAN.md  07-01-SUMMARY.md  07-02-COMMIT-TRACE.md  07-02-PLAN.md  07-02-SUMMARY.md  07-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/fk_quant_research_accel/: __init__.py  async_client.py  async_orchestrator.py  cli.py  client.py  leaderboard.py  logging.py  orchestrator.py  reporting.py  retry.py
src/fk_quant_research_accel/diagnostics/: __init__.py  health.py
src/fk_quant_research_accel/models/: __init__.py  enums.py  experiment.py  hashing.py  ids.py  manifest.py  result.py
src/fk_quant_research_accel/packaging/: __init__.py  acceptance.py  assembler.py  manifest.py
tests/: test_async_client.py  test_async_orchestrator.py  test_cli.py  test_diagnostics.py  test_experiment_manifest.py  test_leaderboard.py  test_logging.py  test_models.py  test_orchestrator.py  test_packaging.py  test_problems.py  test_reporting.py  test_result_schema.py  test_retry.py  test_run_analysis.py  test_scoring.py  test_store.py  test_validation.py
(+21 files in other folders)
