[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fk-quant-research-acceleration"
version = "0.1.0"
description = "Batch research orchestration for Feynman-Kac PINN quant experiments"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sakeeb" }
]
dependencies = [
  "anyio>=4.12.1",
  "httpx>=0.28.1",
  "tenacity>=9.1.4",
  "requests>=2.32.0",
  "pydantic>=2.12.5",
  "PyYAML>=6.0.3",
  "structlog>=25.5.0",
  "typer>=0.21.0",
  "rich>=14.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12",
  "types-requests>=2.32.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
